# AKT1.DuelTime

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
Core/: CMakeLists.txt
Core/headers/: core.h  stdafx.h
Core/src/: core.cpp
PLACEHOLDER/: CMakeLists.txt
PLACEHOLDER/headers/: mainwindow.h  stdafx.h
PLACEHOLDER/src/: main.cpp  mainwindow.cpp
tests/: CMakeLists.txt  test.cpp
